--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,3 +12,10 @@
     ]
   }
   
+
+// Compile 
+//   javac -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml MainApp.java
+
+
+// Run 
+// java -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml MainApp
