--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,19 @@
+// Updated launch.json
 {
-    "version": "0.2.0",
-    "configurations": [
-        
+  "version": "0.2.0",
+  "configurations": [
       {
-        "type": "java",
-        "name": "Launch MainApp",
-        "request": "launch",
-        "mainClass": "MainApp",  // Make sure to use the correct class name
-        "vmArgs": "--module-path \"C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
+          "type": "java",
+          "name": "Launch MainInterface",
+          "request": "launch",
+          "mainClass": "MainInterface.MainInterface",  // Adjusted to match folder structure
+          "vmArgs": "--module-path \"C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
       }
-    ]
-  }
-  
+  ]
+}
 
-// Compile 
-//   javac -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml MainApp.java
+// Compile
+//   javac -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main/MainInterface.java
 
-
-// Run 
-// java -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml MainApp
+// Run
+// java -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main.MainInterface
