--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,3 @@
-// Updated launch.json
 {
   "version": "0.2.0",
   "configurations": [
@@ -6,7 +5,7 @@
           "type": "java",
           "name": "Launch MainInterface",
           "request": "launch",
-          "mainClass": "MainInterface.MainInterface",  // Adjusted to match folder structure
+          "mainClass": "MainInterface.MainInterface",
           "vmArgs": "--module-path \"C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
       }
   ]
