--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,13 @@
           "name": "Launch MainInterface",
           "request": "launch",
           "mainClass": "MainInterface.MainInterface",
-          "vmArgs": "--module-path \"C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
+          "vmArgs": "--module-path \"C:/javafx-sdk-23.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
       }
   ]
 }
 
 // Compile
-//   javac -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main/MainInterface.java
+//   javac -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/javafx-sdk-23.0.1/lib/*" --module-path "C:/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main/MainInterface.java
 
 // Run
-// java -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib/*" --module-path "C:/Users/dell store/Desktop/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main.MainInterface
+// java -cp ".;C:\mysql-connector-j-9.1.0\mysql-connector-j-9.1.0.jar;C:/javafx-sdk-23.0.1/lib/*" --module-path "C:/javafx-sdk-23.0.1/lib" --add-modules javafx.controls,javafx.fxml Main.MainInterface
